# MAA-API

./: .gitignore  Dockerfile  README.md  account.json  config.yaml  daily_task.json  daily_task_template.json  daily_tasks.json  pyproject.toml
maa_api/: log.py  main.py
maa_api/config/: config.py  path_config.py
maa_api/dependence/: auth.py
maa_api/exception/: excetpion_handler.py  response_exception.py
maa_api/model/: asst.py  downloader.py  request.py  response.py  task.py  updater.py  utils.py
maa_api/model/core/: asst.py  asst_manager.py  callback_handler.py  executor.py  pipeline.py  scheduler.py  task.py
maa_api/model/request/: request.py
maa_api/model/util/: downloader.py  updater.py
maa_api/router/: adb.py  maa.py  maa_cli.py  screenshot.py  template.py
maa_api/scheduler/: check_ark_running_scheduler.py  daily_art_task_scheduler.py  daily_task_scheduler.py
maa_api/service/: adb_service.py  maa_cli_service.py  smtp_service.py
maa_config/profiles/: default.json
static/: daily.html  email_template.html  index.html
static/css/: style.css
static/js/: app.js
